[project]
name = "api-dev"
version = "0.1.0"
description = ""
authors = [
    {name = "Santosh Gummidipundi",email = "santosh@santoshg.io"}
]
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "google-cloud (>=0.34.0,<0.35.0)",
    "google-cloud-secret-manager (>=2.22.1,<3.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "pre-commit (>=4.0.1,<5.0.0)",
    "types-redis (>=4.6.0.20241004,<5.0.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
