[tool.poetry]
name = "api-dev"
version = "0.1.0"
description = ""
authors = ["Santosh Gummidipundi <santosh@santoshg.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
google-cloud = "^0.34.0"
google-cloud-secret-manager = "^2.22.1"
pre-commit = "^4.0.1"
types-redis = "^4.6.0.20241004"
redis = "^5.2.1"
fire = "^0.7.0"
cloudpathlib = {extras = ["gs"], version = "^0.20.0"}
stravalib = "^2.1"
tqdm = "^4.67.1"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
